--- a/dog-site/package.json
+++ b/dog-site/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
     "web-vitals": "^2.1.4"
